used hower on a element to show another  element

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       <div>
         <a href="index.html" class="button button-home">Home</a>
         <a href="#" class="button button-about on-about">About</a>
-        <a href="speech.html" class="button button-events">Message</a>
+        <a href="speech.html" class="button button-speech">Message</a>
         <a href="myexperience.html" class="button button-myexperience">Events</a>
       </div>
 
