--- a/myexperience.html
+++ b/myexperience.html
@@ -11,7 +11,7 @@
       <div>
         <a href="index.html" class="button button-home">Home</a>
         <a href="about.html" class="button button-about">About</a>
-        <a href="speech.html" class="button button-events">Message</a>
+        <a href="speech.html" class="button button-speech">Message</a>
         <a href="#" class="button button-myexperience on-exp">Events</a>
       </div>
 
