--- a/about.html
+++ b/about.html
@@ -10,17 +10,34 @@
     <div class='page-header'>
       <h1>Father Agnel School Noida</h1>
       <div>
-        <a href="index.html" class="button button-home">Home</a>
+        <a href="index.html" class="button button-home ">Home</a>
+        <div class="home-hint">
+          This is the home hint
+        </div>
         <a href="#" class="button button-about on-about">About</a>
-        <a href="speech.html" class="button button-speech">Message</a>
+
+        <div class="about-hint">
+          This is the about hint
+        </div>
+
         <a href="myexperience.html" class="button button-myexperience">Events</a>
+
+        <div class="myexperience-hint">
+          This is the Events hint
+        </div>
+
+        <a href="speech.html" class="button button-speech">Message</a>
+
+        <div class="speech-hint">
+          This is the message hint
+        </div>
       </div>
 
     </div>
       
     <div class="container">
       <div style='margin-right: 30px;'>
-        <img src="imgs/founder.png" alt="sorry ">
+        <img src="imgs/about.png" alt="sorry ">
       </div>
 
       <div>
