--- a/myexperience.html
+++ b/myexperience.html
@@ -10,9 +10,27 @@
       <h1>Father Agnel School Noida</h1>
       <div>
         <a href="index.html" class="button button-home">Home</a>
+        <div class="home-hint">
+          Read an introduction to Fr Agnel's school.
+        </div>
         <a href="about.html" class="button button-about">About</a>
+
+        <div class="about-hint">
+          Read about Fr Agnel's school.
+        </div>
+
+        <a href="myexperience.html" class="button button-myexperience on-exp">Events</a>
+
+        <div class="myexperience-hint">
+          Find out the events that's happening this year at Fr. Agnel's school
+        </div>
+
         <a href="speech.html" class="button button-speech">Message</a>
-        <a href="#" class="button button-myexperience on-exp">Events</a>
+
+        <div class="speech-hint">
+          This is the message hint
+        </div>
+
       </div>
 
     </div>
@@ -22,7 +40,7 @@
       <div class="container">
 
         <div>
-          <img src="imgs/diwali_assembly.png" alt="sorry facing technical difficult">
+          <img src="imgs/diwali_assembly.jpg"  height="200px" alt="sorry facing technical difficult">
         </div>
 
         <div>
@@ -36,7 +54,7 @@
 
       <div class="container">
         <div>
-          <img src="imgs/primary-assembly.png" alt="sorry facing technical difficult">
+          <img src="imgs/primary-assembly.jpg"  height="200px" alt="sorry facing technical difficult">
         </div>
 
         <div>
@@ -48,7 +66,7 @@
 
       <div class="container">
         <div>
-          <img src="imgs/rakhi-celebration.png" alt="">
+          <img src="imgs/rakhi-celebration.jpg" alt="" height="200px">
         </div>
 
         <div>
